syntax = "proto3";

option go_package = "github.com/danilashushkanov/studentClient/pkg/studentServiceApi;student";

package student;

import "google/api/annotations.proto";
import "ss_teacher.proto";

service StudentService{
  rpc CreateStudent(CreateStudentRequest) returns (Student) {
    option (google.api.http) = {
      post: "/student-service/student"
      body: "*"
    };
  };
  rpc GetStudent(GetStudentRequest) returns (Student) {
    option (google.api.http) = {
      get: "/student-service/student/{id}"
    };
  }
  rpc ListStudents(ListStudentRequest) returns (ListStudentResponse) {
    option (google.api.http) = {
      get: "/student-service/student"
    };
  };
  rpc PatchStudent(UpdateStudentRequest) returns (Student) {
    option (google.api.http) = {
      put: "/student-service/student/{id}"
      body: "*"
    };
  };
  rpc DeleteStudent(GetStudentRequest) returns (SimpleResponse) {
    option (google.api.http) = {
      delete: "/student-service/student/{id}"
    };
  };
}


message CreateStudentRequest {
  string full_name = 1;
  int64 age = 2;
  int64 salary = 3;
  repeated CreateTeacherRequest teachers = 4;
}

message GetStudentRequest {
  int64 id = 1;
}

message Student {
  int64 id = 1;
  string fullName = 2;
  int64 age = 3;
  int64 salary = 4;
  repeated Teacher teachers = 5;
}

message ListStudentRequest {
  repeated int64 student_ids = 1;
}

message ListStudentResponse {
  repeated Student students = 1;
}

message UpdateStudentRequest {
  int64 id = 1;
  string full_name = 2;
  int64 age = 3;
  int64 salary = 4;
  repeated UpdateTeacherRequest teachers = 5;
}

message SimpleResponse {}